// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Console tracing exporter class Test spans printing should print full trace 1`] = `
Array [
  "┌──────────────────────────────────────────────────────────────────────────────┐",
  "│ ID: span-1                                                 Depth: 3 Total: 4 │",
  "├──────────────────────────────────────────────────────────────────────────────┤",
  "│ Span #1                     100ms [■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■] │",
  "│   Span #2 *                  50ms [........■■■■■■■■■■■■■■■■■■■■............] │",
  "│     Span #22 (with long n... 25ms [..........■■■■■■■■■■....................] │",
  "│   Span #3                    75ms [......■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■....] │",
  "└──────────────────────────────────────────────────────────────────────────────┘",
]
`;

exports[`Test Console tracing exporter class Test spans printing should print full trace with error 1`] = `
Array [
  "┌──────────────────────────────────────────────────────────────────────────────┐",
  "│ ID: span-1                                                 Depth: 3 Total: 4 │",
  "├──────────────────────────────────────────────────────────────────────────────┤",
  "│ Span #1                     100ms [■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■] │",
  "│   Span #2 *                  50ms [........■■■■■■■■■■■■■■■■■■■■............] │",
  "│     Span #22 » ×             25ms [..........■■■■■■■■■■....................] │",
  "│   Span #3                    75ms [......■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■....] │",
  "└──────────────────────────────────────────────────────────────────────────────┘",
]
`;

exports[`Test Console tracing exporter class Test spans printing should print to the default logger 1`] = `
Array [
  "┌──────────────────────────────────────────────────────────────────────────────┐",
  "│ ID: span-1                                                 Depth: 3 Total: 4 │",
  "├──────────────────────────────────────────────────────────────────────────────┤",
  "│ Span #1                     100ms [■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■] │",
  "│   Span #2 *                  50ms [........■■■■■■■■■■■■■■■■■■■■............] │",
  "│     Span #22 »               25ms [..........■■■■■■■■■■....................] │",
  "│   Span #3                    75ms [......■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■....] │",
  "└──────────────────────────────────────────────────────────────────────────────┘",
]
`;
